--- a/yashoda_datasets_code/gc-all-subjects-depression.ipynb
+++ b/yashoda_datasets_code/gc-all-subjects-depression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1ea40f41-9ab2-47c0-a553-00581642d2e3",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
     "subject_ids = [line.split('/')[-1] for line in openneuro_subject_list.strip().split('\\n')]\n",
     "\n",
     "granger_dir = '/home/jovyan/Projects/projects2/fmri_animal_model_translation/granger_connectivity_csvs'\n",
-    "depression_key_path = 'depression_factors_binary.tsv'\n",
+    "depression_key_path = 'depression_factors_binary (excluded).tsv'\n",
     "\n",
     "# Load depression labels\n",
     "key_df = pd.read_csv(depression_key_path, sep='\\t')\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5a36ff26-19ef-4c99-82df-79c620fc256e",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
       "New shape (after removing same‑network zeros): (222, 274)\n",
       "        participant_id  depression_binary\n",
       "0  sub-NDARINVAG023WG3                0.0\n",
-      "1  sub-NDARINVAG339WHH                1.0\n",
+      "1  sub-NDARINVAG339WHH                0.0\n",
       "2  sub-NDARINVAG388HJL                0.0\n",
       "3  sub-NDARINVAG900RVD                0.0\n",
       "4  sub-NDARINVAH529JMM                0.0\n"
@@ -325,7 +325,7 @@
     "assert merged_df['participant_id'].is_unique\n",
     "\n",
     "# Save result\n",
-    "merged_df.to_csv('gc_network_wide_with_depression_filtered.tsv', sep='\\t', index=False)\n",
+    "merged_df.to_csv('gc_network_wide_with_depression_notmild.tsv', sep='\\t', index=False)\n",
     "\n",
     "print('New shape (after removing same‑network zeros):', merged_df.shape)\n",
     "print(merged_df[['participant_id', 'depression_binary']].head())\n"
