gc not mild.tsv

--- a/yashoda_datasets_code/excluded mild depression key.ipynb
+++ b/yashoda_datasets_code/excluded mild depression key.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dd9a0506-d8c7-4255-8bf0-73b86c3ed385",
    "metadata": {},
    "outputs": [
@@ -17,28 +17,39 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the original depression scale file\n",
-    "df = pd.read_csv('depression_factors.tsv', sep='\\t')\n",
+    "# --- 1. Read the original file ---\n",
+    "df = pd.read_csv(\"depression_factors.tsv\", sep=\"\\t\")\n",
     "\n",
-    "# Define the mapping for the binary label\n",
+    "# --- 2. Normalise the column name and clean text ---\n",
+    "scale_col = \"scale\" if \"scale\" in df.columns else \"Scale\"\n",
+    "if scale_col not in df.columns:\n",
+    "    raise ValueError(\"No column named 'scale' or 'Scale' found.\")\n",
+    "\n",
+    "df[scale_col] = df[scale_col].str.strip().str.lower()\n",
+    "\n",
+    "# --- 3. Map categories to binary labels (others -> NaN) ---\n",
     "mapping = {\n",
-    "    'moderate depression': 1,\n",
-    "    'severe depression': 1,\n",
-    "    'normal/symptom absent': 0,\n",
+    "    \"moderate depression\": 1,\n",
+    "    \"severe depression\": 1,\n",
+    "    \"normal/symptom absent\": 0,\n",
     "}\n",
     "\n",
-    "# Apply the mapping; unmapped values become NaN\n",
-    "df['depression_binary'] = df['scale'].map(mapping)\n",
+    "df[\"depression_binary\"] = df[scale_col].map(mapping)\n",
     "\n",
-    "# Select relevant columns and drop any rows where depression_binary is NaN\n",
-    "binary_df = df[['participant_id', 'depression_binary']].dropna()\n",
+    "# --- 4. Keep only desired rows and columns ---\n",
+    "binary_df = df[[\"participant_id\", \"depression_binary\"]].dropna()\n",
     "\n",
-    "# Optional sanity check: ensure one row per participant\n",
-    "assert binary_df['participant_id'].is_unique, \"Duplicate participant IDs found after mapping.\"\n",
+    "# --- 5. Smoke / sanity checks ---\n",
+    "assert binary_df[\"participant_id\"].is_unique, (\n",
+    "    \"Duplicate participant IDs found after mapping.\"\n",
+    ")\n",
+    "assert not (df[scale_col] == \"mild depression\").isin(binary_df[\"participant_id\"]).any(), (\n",
+    "    \"Rows with mild depression slipped through the filter.\"\n",
+    ")\n",
     "\n",
-    "# Write to a new TSV file\n",
-    "binary_df.to_csv('depression_factors_binary.tsv', sep='\\t', index=False)\n",
-    "print('Saved binary labels for', len(binary_df), 'participants.')\n"
+    "# --- 6. Write the new key ---\n",
+    "binary_df.to_csv(\"depression_factors_binary_withoutmild.tsv\", sep=\"\\t\", index=False)\n",
+    "print(f\"Saved binary labels for {len(binary_df)} participants.\")\n"
    ]
   },
   {
