--- a/yashoda_datasets_code/fc-all-subjects-depression.ipynb
+++ b/yashoda_datasets_code/fc-all-subjects-depression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d64c0eb9-6814-45b1-840d-1883b0256acf",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
     "fc_dir = 'derivatives/fc data'  # update this path to where the FC files are stored\n",
     "\n",
     "# Path to your depression key\n",
-    "depression_key_path = 'depression_factors_binary (excluded).tsv'\n",
+    "depression_key_path = 'depression_factors_binary_withoutmild.tsv'\n",
     "\n",
     "# Load depression key and clean IDs\n",
     "key_df = pd.read_csv(depression_key_path, sep='\\t')\n",
