--- a/yashoda_datasets_code/gc-all-subjects-depression.ipynb
+++ b/yashoda_datasets_code/gc-all-subjects-depression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1ea40f41-9ab2-47c0-a553-00581642d2e3",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
     "subject_ids = [line.split('/')[-1] for line in openneuro_subject_list.strip().split('\\n')]\n",
     "\n",
     "granger_dir = '/home/jovyan/Projects/projects2/fmri_animal_model_translation/granger_connectivity_csvs'\n",
-    "depression_key_path = 'depression_factors_binary (excluded).tsv'\n",
+    "depression_key_path = 'depression_factors_binary_withoutmild.tsv'\n",
     "\n",
     "# Load depression labels\n",
     "key_df = pd.read_csv(depression_key_path, sep='\\t')\n",
