--- a/yashoda_datasets_code/gc-all-subjects-depression.ipynb
+++ b/yashoda_datasets_code/gc-all-subjects-depression.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5a36ff26-19ef-4c99-82df-79c620fc256e",
    "metadata": {},
    "outputs": [
@@ -279,13 +279,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New shape (after removing same‑network zeros): (222, 274)\n",
+      "New shape (after removing same‑network zeros): (164, 274)\n",
       "        participant_id  depression_binary\n",
       "0  sub-NDARINVAG023WG3                0.0\n",
-      "1  sub-NDARINVAG339WHH                0.0\n",
       "2  sub-NDARINVAG388HJL                0.0\n",
       "3  sub-NDARINVAG900RVD                0.0\n",
-      "4  sub-NDARINVAH529JMM                0.0\n"
+      "4  sub-NDARINVAH529JMM                0.0\n",
+      "5  sub-NDARINVAK834VNU                0.0\n"
      ]
     }
    ],
